# osc-ingest-tools

./: .codespell  .flake8  .gitignore  .pre-commit-config.yaml  OWNERS  README.md  pyproject.toml  setup.py  tox.ini  tox.ini.previous
.github/: CODEOWNERS
.github/workflows/: bootstrap.yaml  build-test-release.yaml  build-test.yaml  ci.yml  dependencies.yaml  documentation.yaml  gh-release.yaml  openssf-scorecard.yaml  release.yaml  release.yml  security.yaml  test-release.yaml  verify.yaml
osc_ingest_trino/: __init__.py  boto3_utils.py  dotenv_utils.py  sqlcols.py  sqltypes.py  trino_utils.py
osc_ingest_trino/unmanaged/: __init__.py  unmanaged_hive_ingest.py
scripts/: template-to-repo.sh  tomllint.sh
tests/: __init__.py  test_trino_utils.py
